Support relative path of logback-default.xml on windows